--- a/style.css
+++ b/style.css
@@ -142,13 +142,30 @@ header {
   padding: 10px;
 }
 
-.bar {
+.bar1 {
   width: 30px;
   height: 3px;
-  background-color: #333;
+  background-color: gold;
   margin: 3px 0;
   border-radius: 3px;
 }
+
+.bar2 {
+  width: 30px;
+  height: 3px;
+  background-color: green;
+  margin: 3px 0;
+  border-radius: 3px;
+}
+
+.bar3 {
+  width: 30px;
+  height: 3px;
+  background-color: blue;
+  margin: 3px 0;
+  border-radius: 3px;
+}
+
 
   /*-------------------------menu bar when screen small-----------------------------*/
 @media (max-width: 768px) {
